# affx

./: .gitignore  CMakeLists.txt  setup.py  stubgen.py
include/affx/: affine.hpp  affx.hpp
pyaffx/: __init__.py  stubgen.py
pybind11/include/pybind11/: pybind11.h
src/: pyaffx.cpp
